--- a/src/appointment.html
+++ b/src/appointment.html
@@ -189,7 +189,7 @@
           &copy; 2024 Lung. All Rights Reserved
         </div>
         <div class="credits">
-          Developed by <a href="https://github.com/RachinduAbeysekara" target="_blank" style="color: rgb(4, 9, 150,);"><b>Rachindu</b></a>
+          Developed by <a href="https://github.com/ShenSingh" target="_blank" style="color: rgb(4, 9, 150,);"><b>ShenSingh</b></a>
         </div>
       </div>
      
